[gd_scene load_steps=5 format=3 uid="uid://t21yh5gaf8n"]

[ext_resource type="Texture2D" uid="uid://bkf57disno6ye" path="res://images/ui/stackable_catcoin.png" id="1_fcnot"]
[ext_resource type="Script" path="res://scripts/big_catcoin.gd" id="2_qfhnd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i7jdh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fcnot")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6b847"]
radius = 10.198

[node name="Coin" type="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i7jdh")
script = ExtResource("2_qfhnd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6b847")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
